Cleanup up to Ch. 90

--- a/Kebra Negast 202x.scriv/QuickLook/Preview.html
+++ b/Kebra Negast 202x.scriv/QuickLook/Preview.html
@@ -511,25 +511,25 @@
 <p class="itemText">And King Menyelek came with great pomp to his mother’s city, and then he saw in the height the heavenly Zion sending forth light like the sun. And when the Queen saw this she gave thanks to the God of Israel, and praised Him. And she bowed low, and struck her breast, and then threw up her head and gazed into the heavens, and thanked her Creator; and she clapped her hands together, and sent forth shouts of laughter from her mouth, and danced on the ground with her feet; and she adorned her whole ...</p>
 </li>
 <li>
-<p class="itemTitle">How Queen Mâkĕdâ made her son King</p>
-<p class="itemText">And on the third day Mâkĕdâ delivered over to her son seventeen thousand and seven hundred chosen horses, which were to watch the army of the enemy, and would again plunder the cities of the enemy, and seven thousand and seven hundred mares that had borne foals, and one thousand female mules, and seven hundred chosen mules, and apparel of honour, gold and silver measured by the gômôr, and measured by the ḳôr, some six and some seven, and she delivered over to her son everything that was his by l...</p>
+<p class="itemTitle">How Queen Mâkĕdâ made her son king</p>
+<p class="itemText">And on the third day Mâkĕdâ delivered over to her son 17,700 chosen horses, which were to watch the army of the enemy, and would again plunder the cities of the enemy, and 7,700 mares that had birthed foals, and 1,000 female mules, and 700 chosen mules, and apparel of honor, gold and silver measured by the gômôr, and measured by the ḳôr, some six and some seven, and she delivered over to her son everything that was his by law, and all the throne of her kingdom.</p>
 </li>
 <li>
-<p class="itemTitle">How the nobles (or governors) of Ethiopia took the oath</p>
-<p class="itemText">And the Queen said unto her nobles: “Speak ye now, and swear ye by the heavenly Zion that ye will not make women queens or set them upon the throne of the kingdom of Ethiopia, and that no one except the male seed of David, the son of Solomon the King, shall ever reign over Ethiopia, and that ye will never make women queens.” And all the nobles of the king’s house swore, and the governors, and the councillors, and the administrators.</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">And she made Êlmĕyâs and ’Azâryâs (Azariah) the chief of the pr...</p>
+<p class="itemTitle">How the nobles of Ethiopia took the oath</p>
+<p class="itemText">And the Queen said to her nobles: “Speak now, and swear by the heavenly Zion that you will not make women queens or set them upon the throne of the kingdom of Ethiopia, and that no one except the male descendants of Menyelek, the son of Solomon the King, shall ever reign over Ethiopia, and that you will never make women queens.” And all the nobles of the king’s house swore, and the governors, and the councillors, and the administrators.</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And she made Êlmĕyâs and Azariah the chief of the priests a...</p>
 </li>
 <li>
-<p class="itemTitle">How he himself related to his mother how they made him King</p>
-<p class="itemText">“And when these had become silent there rose up the priest who gave us the Commandments, with the fear of God, and he shed tears whilst our bodies quaked and our tears flowed down. God is indeed, without falsehood, in our hearts, and He dwelleth in His commandment. And His commandment is uttered, and it removeth itself not from those who love Him and who keep His commandment, and He is with them continually. And now, hearken to the judgment and laws which the elders and the sons of the mighty me...</p>
+<p class="itemTitle">How he told his mother how they made him King</p>
+<p class="itemText">“And when these had become silent there rose up the priest who gave us the Commandments, with the fear of God, and he shed tears while our bodies quaked and our tears flowed down. God is indeed, without falsehood, in our hearts, and He dwells in His commandment. And His commandment is uttered, and it removes itself not from those who love Him and who keep His commandment, and He is with them continually. And now, listen to the judgment and laws which the elders and the sons of the mighty men of ...</p>
 </li>
 <li>
-<p class="itemTitle">How the Queen talked to the Children of Israel</p>
-<p class="itemText">And the Queen answered and said unto them, “Not as servants as ye say, but as a father and a teacher will we treat you. For ye are the guardians of the Law of God, and the guides of the commandment of the God of Israel, and the men of the house of God, and the guardians of Zion, the Tabernacle of the Law of God, and we do not wish to transgress your commandments, for ye shall be unto us a guide to the path of God away from all evil. At your words we will withdraw from that wherewith God is not w...</p>
+<p class="itemTitle">How the Queen talked to the children of Israel</p>
+<p class="itemText">And the Queen answered and said to them, “Not as servants as you say but as a father and a teacher will we treat you. For you are the guardians of the Law of God, the guides of the commandment of the God of Israel, the men of the house of God, and the guardians of Zion, the Tabernacle of the Law of God, and we do not wish to disobey your commandments, for you shall be to us a guide to the path of God away from all evil. At your words we will withdraw from that with which God is not well-pleased,...</p>
 </li>
 <li>
 <p class="itemTitle">How Azariah praised the Queen and her city</p>
-<p class="itemText">And Azariah rose up and said unto the Queen, “O our Lady, verily there is no one like unto thee in wisdom and understanding—the which have been given unto thee by God—except my lord the King, who hath brought us unto this land with our Lady Zion, the holy and heavenly Tabernacle of the Law of God. Now we and our fathers of olden time have said, God hath chosen none except the House of Jacob, us hath He chosen, us hath He multiplied, us hath He held to please Him, and He hath made us kings and ma...</p>
+<p class="itemText">And Azariah rose up and said to the Queen, “Oh our Lady, certainly there is no one like you in wisdom and understanding — the which have been given to you by God — except my lord the King, who has brought us to this land with our Lady Zion, the holy and heavenly Tabernacle of the Law of God. Now we and our fathers of olden time have said, God has chosen none except the House of Jacob, us has He chosen, us has He multiplied, us has He held to please Him, and He has made us kings and made us membe...</p>
 </li>
 <li>
 <p class="itemTitle">This is what ye shall eat: the clean and the unclean</p>
