Cleanup up to Ch. 100

--- a/Kebra Negast 202x.scriv/QuickLook/Preview.html
+++ b/Kebra Negast 202x.scriv/QuickLook/Preview.html
@@ -552,24 +552,24 @@
 <p class="itemText">Now through the Kebra Nagast we know and have learned that of a surety the King of Ethiopia is honorable, and that he is the King of Zion, and the firstborn of the descendants of Shem, and that the habitation of God is in Zion, and that He there breaks the might and power of all his enemies and foes. And after him the King of Byzantium was the anointed of the Lord because of the wood of the Cross. And as concerning the kingdom of Israel — when the Pearl was born of them, and of the Pearl again w...</p>
 </li>
 <li>
-<p class="itemTitle">Concerning the Prophecy about Christ</p>
-<p class="itemText">Moreover Moses proclaimed in the Law and said, “A prophet like myself shall rise up for you from your brethren, and hearken ye unto him; and every soul that will not hearken unto that prophet ye shall root out from among the people.” And this he said concerning Christ the Son of God. And he also prophesied concerning His Crucifixion, and said, “When the serpents afflicted the children of Israel they cried out to Moses, and Moses cried out to God to deliver them from the serpents. And God said un...</p>
+<p class="itemTitle">Concerning the prophecy about Christ</p>
+<p class="itemText">Moreover Moses proclaimed in the Law and said, “A prophet like myself shall rise up for you from your siblings, and listen to him; and every soul that will not listen to that prophet you shall root out from among the people.” And this he said concerning Christ the Son of God. And he also prophesied concerning His Crucifixion, and said, “When the serpents afflicted the children of Israel they cried out to Moses, and Moses cried out to God to deliver them from the serpents. And God said to him, Ma...</p>
 </li>
 <li>
-<p class="itemTitle">Concerning the Murmuring of Israel</p>
-<p class="itemText">And once again the children of Israel murmured concerning the ministration of the priests before the Lord, saying, “Are we not Israel, we the seed of Abraham, and why cannot we also offer up sacrifice like them in the Tent of Witness by the Tabernacle of the Law of God, the holy Zion, with censers and incense and the holy instruments? Why should Moses, and his brother Aaron, and their children alone do this? Are we not people whom God hath chosen as much as they are, and shall we not do His Will...</p>
+<p class="itemTitle">Concerning the murmuring of Israel</p>
+<p class="itemText">And once again the children of Israel murmured concerning the ministration of the priests before the Lord, saying, “Are we not Israel, we the descendants of Abraham, and why can we not also offer up sacrifice like them in the Tent of Witness by the Tabernacle of the Law of God, the holy Zion, with censers and incense and the holy instruments? Why should Moses, and his brother Aaron, and their children alone do this? Are we not people whom God has chosen as much as they are, and shall we not do H...</p>
 </li>
 <li>
-<p class="itemTitle">Concerning the Rod of Moses and the Rod of Aaron</p>
-<p class="itemText">And Moses spake these words unto them, and they brought a rod into each of the houses of their fathers which they had chosen for purity, and there were twelve rods. And Moses wrote upon their rods the names of their fathers: on the rod of Aaron was written the name of Levi, and on the rod of Karmîn was written the name of Judah, and on the rod of Adônyâs was written the name of Reuben, and on the rod of every man of all the houses of Israel was written in like manner the name of his father. And ...</p>
+<p class="itemTitle">Concerning the rod of Moses and the rod of Aaron</p>
+<p class="itemText">And Moses spoke these words to them, and they brought a rod into each of the houses of their fathers which they had chosen for purity, and there were twelve rods. And Moses wrote upon their rods the names of their fathers: on the rod of Aaron was written the name of Levi, and on the rod of Karmîn was written the name of Judah, and on the rod of Adônyâs was written the name of Reuben, and on the rod of every man of all the houses of Israel was written in like manner the name of his father. And Go...</p>
 </li>
 <li>
-<p class="itemTitle">Concerning the Two Servants</p>
-<p class="itemText">Now [it is said] that a certain king had two slaves: the one was arrogant and strong, and the other was humble and weak. And the arrogant slave overcame the humble one, and smote him and all but slew him, and robbed him, and the king upon his throne saw them. And the king descending seized the arrogant slave, and beat him, and crushed him, and bound him in fetters, and cast him into a place of darkness. And he raised up his humble and weak slave, and embraced him, and brushed away the dust from ...</p>
+<p class="itemTitle">Concerning the two servants</p>
+<p class="itemText">Now it is said that a certain king had two slaves: the one was arrogant and strong, and the other was humble and weak. And the arrogant slave overcame the humble one, and struck him and all but killed him, and robbed him, and the king upon his throne saw them. And the king descending seized the arrogant slave, beat him, crushed him, bound him in fetters, and cast him into a place of darkness. And he raised up his humble and weak slave, embraced him, brushed away the dust from him, washed him, po...</p>
 </li>
 <li>
 <p class="itemTitle">Concerning the Angels who rebelled</p>
-<p class="itemText">And there were certain angels with whom God was wroth—now He, the Knower of the heart knew them—and they reviled Adam, saying, “Since God hath shown love to him He hath set us to minister unto him, and the beasts and creeping things, and the fish of the sea, and the birds of the air, and all fruits, and the trees of the field, and the heavens and the earth also; and He hath appointed the heavens to give him rain, and the earth to give him fruits. And the sun and the moon also hath He given him, ...</p>
+<p class="itemText">And there were certain angels with whom God was angry — now He, the Knower of the heart knew them — and they reviled Adam, saying, “Since God has shown love to him He has set us to minister to him, the beasts and creeping things, the fish of the sea, the birds of the air, all fruits, the trees of the field, and the heavens and the earth also; and He has appointed the heavens to give him rain, and the earth to give him fruits. And the sun and the moon also has He given him, the sun to give him li...</p>
 </li>
 <li>
 <p class="itemTitle">Concerning Him that existeth in Everything and Everywhere</p>
