Cleanup up to Ch. 105

--- a/Kebra Negast 202x.scriv/QuickLook/Preview.html
+++ b/Kebra Negast 202x.scriv/QuickLook/Preview.html
@@ -572,24 +572,24 @@
 <p class="itemText">And there were certain angels with whom God was angry — now He, the Knower of the heart knew them — and they reviled Adam, saying, “Since God has shown love to him He has set us to minister to him, the beasts and creeping things, the fish of the sea, the birds of the air, all fruits, the trees of the field, and the heavens and the earth also; and He has appointed the heavens to give him rain, and the earth to give him fruits. And the sun and the moon also has He given him, the sun to give him li...</p>
 </li>
 <li>
-<p class="itemTitle">Concerning Him that existeth in Everything and Everywhere</p>
-<p class="itemText">And again God said unto Moses: “Make for Me an open space before the courtyard of the Tabernacle; no man who is impure sexually and unclean shall come there, and no one who is not pure. For I am there, and not only there, but in every place like thereunto where My Name is invoked in purity. I was with Daniel in the den [of lions], and I was with Jonah in the belly of the great fish, and I was with Joseph in the pit, and I was with Jeremiah in the well [fed from] the lake. I stand under the deepe...</p>
+<p class="itemTitle">Concerning Him that exists in everything and everywhere</p>
+<p class="itemText">And again God said to Moses: “Make for Me an open space before the courtyard of the Tabernacle; no man who is impure sexually and unclean shall come there, and no one who is not pure. For I am there, and not only there, but in every place like that where My Name is invoked in purity. I was with Daniel in the den of lions, and I was with Jonah in the belly of the great fish, and I was with Joseph in the pit, and I was with Jeremiah in the well fed from the lake. I stand under the deepest deep so ...</p>
 </li>
 <li>
 <p class="itemTitle">Concerning the Beginning</p>
-<p class="itemText">As David prophesied by the mouth of the Holy Spirit, saying, “With Thee was the headship on the day of might.” Now what do these words, “day of might” mean? Is it not the day whereon Christ, the Word of the Father, created heaven and earth? For Moses saith in the beginning of the Book, “In the beginning God made the heavens and the earth.” Understand then “In the beginning” meaneth “in Christ”; the interpretation of “beginning” is Christ. John the Apostle, the son of Zebedee, saith concerning Ch...</p>
+<p class="itemText">As David prophesied by the mouth of the Holy Spirit, saying, “With You was the headship on the day of might.” Now what do these words, “day of might” mean? Is it not the day where Christ, the Word of the Father, created heaven and earth? For Moses said in the beginning of the Book, “In the beginning God made the heavens and the earth.” Understand then “In the beginning” means “in Christ;” the interpretation of “beginning” is Christ. John the Apostle, the son of Zebedee, said concerning Christ, “...</p>
 </li>
 <li>
-<p class="itemTitle">Concerning the Horns of the Altar</p>
-<p class="itemText">Now, the Tabernacle symbolizeth the horns of the altar, where the holy priests offer up sacrifice, whereon they place the ṭarapîzâ, (i.e. table), the similitude of the grave wherein He (i.e. Christ) was buried in Golgotha. And what is on the table, that is, the offering, is a symbol of the firstling, that is to say, the Body of Emmanuel, [or] “’Akrâṭôs,” the “pure,” the “unmixed,” which our Saviour took from Mary, of the which He said unto His holy Apostles, “Eat ye My Body; whosoever eateth not...</p>
+<p class="itemTitle">Concerning the horns of the altar</p>
+<p class="itemText">Now, the Tabernacle symbolizes the horns of the altar, where the holy priests offer up sacrifice, on which they place the table, the likeness of the grave in which Christ was buried in Golgotha. And the offering on the table is a symbol of the firstling, that is to say, the Body of Emmanuel, or “’Akrâṭôs,” the “pure,” the “unmixed,” which our Savior took from Mary, of the which He said to His holy Apostles, “Eat My Body; whoever does not eat of My Body has no<span class="Apple-converted-space">  </span>portion with Me, and no everlasting...</p>
 </li>
 <li>
-<p class="itemTitle">More concerning the Ark and the Talk of the Wicked</p>
-<p class="itemText">And as concerning the Ark: God saved Noah in the Ark. And God held converse with Abraham in the wood of Manbar, that is to say the wood that cannot be destroyed; and He saved Isaac by means of the ram which was caught in the thicket; and He made Jacob rich by means of three rods of woods which he laid in running water; and through the top of his staff Jacob was blessed. And He said unto Moses, “Make a tabernacle of wood which cannot be destroyed, in the similitude of Zion, the Tabernacle of the ...</p>
+<p class="itemTitle">More concerning the Ark and the talk of the wicked</p>
+<p class="itemText">And as concerning the Ark: God saved Noah in the Ark. And God had a conversation with Abraham in the wood of Manbar, that is to say the wood that cannot be destroyed; and He saved Isaac by means of the ram which was caught in the thicket; and He made Jacob rich by means of three rods of woods which he laid in running water; and through the top of his staff Jacob was blessed. And He said to Moses, “Make a tabernacle of wood which cannot be destroyed, similar to Zion, the Tabernacle of the Covenan...</p>
 </li>
 <li>
 <p class="itemTitle">Concerning the belief of Abraham</p>
-<p class="itemText">And thou dost not understand that they were justified by faith—Abraham, and David and all the Prophets, one after the other, who prophesied concerning the coming of the Son of God. And Abraham said, “Wilt Thou in my days, O Lord, cast Thy word upon the ground?” And God said unto him, “By no means. His time hath not yet come, but I will shew thee a similitude of His coming. Get thee over the Jordan, and dip thyself in the water as thou goest over, and arrive at the city of Sâlêm, where thou shalt...</p>
+<p class="itemText">And you do not understand that they were justified by faith — Abraham, and David and all the Prophets, one after the other, who prophesied concerning the coming of the Son of God. And Abraham said, “Will You in my days, Oh Lord, cast Your word upon the ground?” And God said to him, “By no means. His time has not yet come, but I will show you something similar to His coming. Get over the Jordan, and dip yourself in the water as you go over, and arrive at the city of Salem, where you shall meet Me...</p>
 </li>
 <li>
 <p class="itemTitle">A Prophecy concerning the Coming of Christ</p>
