Cleanup up to Ch. 110

--- a/Kebra Negast 202x.scriv/QuickLook/Preview.html
+++ b/Kebra Negast 202x.scriv/QuickLook/Preview.html
@@ -592,30 +592,31 @@
 <p class="itemText">And you do not understand that they were justified by faith — Abraham, and David and all the Prophets, one after the other, who prophesied concerning the coming of the Son of God. And Abraham said, “Will You in my days, Oh Lord, cast Your word upon the ground?” And God said to him, “By no means. His time has not yet come, but I will show you something similar to His coming. Get over the Jordan, and dip yourself in the water as you go over, and arrive at the city of Salem, where you shall meet Me...</p>
 </li>
 <li>
-<p class="itemTitle">A Prophecy concerning the Coming of Christ</p>
-<p class="itemText">And now hearken how each one of them hath prophesied concerning Him, [for the narrative] is pleasant to hear. Isaiah the Prophet prophesied concerning His coming and said, " A Son is born unto us. A Child is given unto us. Dominion is written upon His shoulder. He is God, strong in rule, King, great Counsellor is His name.” Now the meaning of this is manifest: the Son of God is born, Whose sovereignty was written down before the world was, and He is wiser than anyone else: [this is what] he sait...</p>
+<p class="itemTitle">A prophecy concerning the coming of Christ</p>
+<p class="itemText">And now listen how each one of them has prophesied concerning Him, for the narrative is pleasant to hear. Isaiah the Prophet prophesied concerning His coming and said, “A Son is born to us. A Child is given to us. Dominion is written upon His shoulder. He is God, strong in rule, King, great Counsellor is His name.” Now the meaning of this is manifest: the Son of God is born, Whose sovereignty was written down before the world was, and He is wiser than anyone else: this is what he said to you. An...</p>
 </li>
 <li>
-<p class="itemTitle">Concerning His entrance into Jerusalem in Glory</p>
-<p class="itemText">And the Prophets have prophesied concerning His glorious entry into Jerusalem, and Isaiah the Prophet said, “Shine thou, shine thou, Jerusalem, thy light hath come and the glory of God hath risen upon thee.”</span></p></p>
+<p class="itemTitle">Concerning His entrance into Jerusalem in glory</p>
+<p class="itemText">And the Prophets have prophesied concerning His glorious entry into Jerusalem, and Isaiah the Prophet said, “Shine you, shine you, Jerusalem, your light has come and the glory of God has risen upon you.”</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1">Thus the Prophet Zechariah prophesied and said, “Rejoice, rejoice, daughter of Zion, and let Jerusalem shout for joy.”</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">Thus David prophesied and said, “Out of the mouth of children and babes Thou hast prepared praise because of the enemy, so that Thou mightest overthrow the enemy and the ave...</p>
+<p class="itemText"><p class="p1"><span class="s1">Thus David prophesied and said, “Out of the mouth of children and babes You have prepared praise because of the enemy, so that You might overthrow the enemy and the avenger.”</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Th...</p>
 </li>
 <li>
 <p class="itemTitle">Concerning the wickedness of the iniquitous Jews</p>
-<p class="itemText">And the Prophets prophesied concerning the wickedness of the Jews. And David said concerning it, “The man of violence hunteth iniquity to destroy himself.” And again he saith, “His sorrow shall return upon his head, and his iniquity upon his forehead” (or, skull).</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">Thus Solomon his son prophesied and said, “The foolish man and the man of iniquity travel by paths that are not straight. He winketh with the eye, and tappeth with the foot, and he giveth a sign by movements of the fingers and motion o...</p>
+<p class="itemText">And the Prophets prophesied concerning the wickedness of the Jews. And David said concerning it, “The man of violence hunts iniquity to destroy himself.” And again he said, “His sorrow shall return upon his head, and his iniquity upon his skull.</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Thus Solomon his son prophesied and said, “The foolish man and the man of iniquity travel by paths that are not straight. He winks with the eye, and taps with the foot, and he gives a sign by movements of the fingers and motion of the lips, and his perve...</p>
 </li>
 <li>
 <p class="itemTitle">Concerning His Crucifixion</p>
 <p class="itemText">And the Prophets also prophesied concerning the Crucifixion of Christ.</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">Thus Moses, the servant of God, prophesied and said, “Ye shall see your salvation crucified upon the wood, and shall not believe.”</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Thus Moses, the servant of God, prophesied and said, “You shall see your salvation crucified upon the wood, and shall not believe.”</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1">Thus David prophesied and said, “Many dogs have seized Me; and they drove nails through My hands and My feet; and they counted all My bones; though they knew Me they despised Me; and they divided My garments among themselves; and they cast lots for My apparel.”</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">Thus Isaiah prophesied concerning th...</p>
+<p class="itemText"><p class="p1"><span class="s1">Thus Isaiah prophesied concerning t...</p>
 </li>
 <li>
 <p class="itemTitle">Concerning His Resurrection</p>
-<p class="itemText">And the prophet David also prophesied concerning His Resurrection and said, “I will arise, saith the Lord, and I will make salvation and manifest it openly.” And again he saith, “Rise up, O Lord, and judge the earth, for Thou shalt inherit among the nations.” And he also prophesied and said, “Rise up, O Lord, help us, and deliver us for Thy Name’s sake.” And again he said, “Let God arise and let His enemies be scattered, and let His enemies flee from before His face.” And he also prophesied and ...</p>
+<p class="itemText">And the prophet David also prophesied, concerning His Resurrection and said, “‘I will arise,’ said the Lord, ‘and I will make salvation and manifest it openly.” And again he said, “Rise up, Oh Lord, and judge the earth, for You shall inherit among the nations.” And he also prophesied and said, “Rise up, Oh Lord, help us, and deliver us for Your Name’s sake.” And again he said, “Let God arise and let His enemies be scattered, and let His enemies flee from before His face.” And he also prophesied ...</p>
 </li>
 <li>
 <p class="itemTitle">Concerning His Ascension and His Second Coming</p>
