Cleanup up to Ch. 117 and Colophon

--- a/Kebra Negast 202x.scriv/QuickLook/Preview.html
+++ b/Kebra Negast 202x.scriv/QuickLook/Preview.html
@@ -621,32 +621,32 @@
 <li>
 <p class="itemTitle">Concerning His Ascension and His Second Coming</p>
 <p class="itemText">Thus all the Prophets and many of the early Fathers prophesied concerning His Ascension and His Second Coming to judge the living and the dead.</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">And David said concerning His Resurrection, “He hath gone up into the heights. Thou hast made captive captivity, and hast given grace to the children of men.” And he also said, “Having gone forth, I will come back, and I will return from the abyss of the sea.” And again he said, “Sing ye unto God Who hath gone up into the heavens, the heavens which are o...</p>
+<p class="itemText"><p class="p1"><span class="s1">And David said concerning His Resurrection, “He has gone up into the heights. You have made captive captivity, and have given grace to the children of men.” And he also said, “Having gone forth, I will come back, and I will return from the abyss of the sea.” And again he said, “Sing you to God Who has gone up into the heavens, the heavens which are oppos...</p>
 </li>
 <li>
 <p class="itemTitle">How the Prophets foreshadowed Him in their persons</p>
-<p class="itemText">Isaac commanded his father, saying, “Bind me”; and he was offered up as a sacrifice, though he did not die, being redeemed by the ram which came down from heaven. And in like manner the Son of God was obedient to His Father even unto death. And He was bound with the love of men, and He was nailed [to the Cross] and was pierced, and the Son of God became our ransom, and His Godhead suffered not.<span class="Apple-converted-space"> </span></span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">Thus Jacob his son departed to the land of Lâbâ (Laban), the country of his mother’s brother, with hi...</p>
+<p class="itemText">Isaac commanded his father, saying, “Bind me;” and he was offered up as a sacrifice, though he did not die, being redeemed by the ram which came down from heaven. And in like manner the Son of God was obedient to His Father even to death. And He was bound with the love of men, and He was nailed to the Cross and was pierced, and the Son of God became our ransom, and His Godhead suffered not.</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Thus Jacob his son departed to the land of Laban, the country of his mother’s brother, with his staff only...</p>
 </li>
 <li>
-<p class="itemTitle">Concerning the Chariot and the Vanquisher of the Enemy</p>
-<p class="itemText">And the Archbishops (or, Patriarchs) answered and said unto Gregory, the Worker of Wonders, “Behold now, we know well, and thou hast made us to understand that the Kings of Ethiopia have become glorious and great through Zion. And the Kings of Rômê also have become great because of the nails [of the Cross] that Helena made into a bridle, which hath become the vanquisher of the enemy for the King of Rômê. And the chariot belongeth to the King of Ethiopia, and it hath vanquished his enemy. And tel...</p>
+<p class="itemTitle">Concerning the chariot and the vanquisher of the enemy</p>
+<p class="itemText">And the Patriarchs answered and said to Gregory, the Worker of Wonders, “Behold now, we know well, and you have made us to understand that the Kings of Ethiopia have become glorious and great through Zion. And the Kings of Byzantium also have become great because of the nails of the Cross that Helena made into a bridle, which has become the vanquisher of the enemy for the King of Byzantium. And the chariot belongs to the King of Ethiopia, and it has vanquished his enemy. And tell us also how lon...</p>
 </li>
 <li>
 <p class="itemTitle">Concerning the return of Zion</p>
-<p class="itemText">And the Tabernacle of the Law of God, the Holy Zion, shall remain here until that day when our Lord shall dwell on Mount Zion; and Zion shall come and shall appear unto all prepared, with three seals—even as Moses gave her—as it saith in the Old Law and in the New, “At the testimony of two or three [witnesses] everything shall stand.” And then, saith Isaiah the Prophet, “The dead shall be raised up, and those who are in the graves shall live, for the dew which [cometh] from Thee is their life.” ...</p>
+<p class="itemText">And the Tabernacle of the Law of God, the Holy Zion, shall remain here until that day when our Lord shall dwell on Mount Zion; and Zion shall come and shall appear to all prepared, with three seals — even as Moses gave her — as it says in the Old Law and in the New, “At the testimony of two or three witnesses everything shall stand.” And then, said Isaiah the Prophet, “The dead shall be raised up, and those who are in the graves shall live, for the dew which comes from You is their life.” And wh...</p>
 </li>
 <li>
-<p class="itemTitle">Concerning the Judgement of Israel</p>
-<p class="itemText">And He shall answer and say unto them, “Why did ye deny Me, and entreat Me evilly and crucify Me, [seeing that] I did all this for you, and that by My coming down [from heaven] I delivered you from Satan and from the slavery of Satan, and that I came for your sakes? Look ye and see how ye pierced Me with nails and thrust the spear through Me.” And the Twelve Apostles shall be raised up, and they shall pass judgement upon them, and shall say unto them, “We would have made you hear, but ye would n...</p>
+<p class="itemTitle">Concerning the judgement of Israel</p>
+<p class="itemText">And He shall answer and say to them, “Why did you deny Me, and plead with Me evilly and crucify Me, seeing that I did all this for you, and that by My coming down from heaven I delivered you from Satan and from the slavery of Satan, and that I came for your sakes? Look and see how you pierced Me with nails and thrust the spear through Me.” And the Twelve Apostles shall be raised up, and they shall pass judgement upon them, and shall say to them, “We would have made you hear, but you would not he...</p>
 </li>
 <li>
-<p class="itemTitle">Concerning the Chariot of Ethiopia</p>
-<p class="itemText">And the Archbishops answered and said unto Gregory, the Worker of Wonders, “Behold now, thou hast told us concerning the vanquisher of the enemy of Rômê, and now [tell us] of the chariot of Ethiopia and whether it shall remain henceforward, to the Coming of Christ, as thou hast told us concerning Zion, and concerning the faith of the people of Ethiopia, and likewise if their chariot shall remain.” And Gregory said unto them, “It shall assuredly not disappear. And again, hearken ye unto me and I ...</p>
+<p class="itemTitle">Concerning the chariot of Ethiopia</p>
+<p class="itemText">And the Archbishops answered and said to Gregory, the Worker of Wonders, “Behold now, you have told us concerning the vanquisher of the enemy of Byzantium, and now tell us of the chariot of Ethiopia and whether it shall remain from now on, to the Coming of Christ, as you have told us concerning Zion, and concerning the faith of the people of Ethiopia, and likewise if their chariot shall remain.” And Gregory said to them, “No, it is destined to disappear. And again, listen to me and I will declar...</p>
 </li>
 <li>
-<p class="itemTitle">Concerning the King of Rômê and the King of Ethiopia</p>
-<p class="itemText">And the King of Rômê, and the King of Ethiopia, and the Archbishop of Alexandria—now the men of Rômê were orthodox—were informed that they were to destroy them. And they were to rise up to fight, to make war upon the enemies of God, the Jews, and to destroy them, the King of Rômê ’Ênyâ, and the King of Ethiopia Pinḥas (Phinehas); and they were to lay waste their lands, and to build churches there, and they were to cut to pieces Jews at the end of this Cycle in twelve cycles of the moon. Then the...</p>
+<p class="itemTitle">Concerning the King of Byzantium and the King of Ethiopia</p>
+<p class="itemText">And the King of Byzantium, and the King of Ethiopia, and the Archbishop of Alexandria — now the men of Byzantium were orthodox — were informed that they were to destroy them. And they were to rise up to fight, to make war upon the enemies of God, the Jews, and to destroy them, the King of Byzantium ’Enyâ, and the King of Ethiopia Phinehas; and they were to lay waste their lands, and to build churches there, and they were to cut to pieces Jews at the end of this Cycle in twelve cycles of the moon...</p>
 </li>
 </ul>
 <hr class="afterText"/>
