--- a/Kebra Negast 202x.scriv/QuickLook/Preview.html
+++ b/Kebra Negast 202x.scriv/QuickLook/Preview.html
@@ -101,8 +101,7 @@
 <p class="itemTitle">Preface to the 202x edition</p>
 <p class="itemText">Why a new version?</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1">A number of freely available copies of this manuscript exist online (and served as this editor’s initial exposure), as well as a series of editions in print form, so it’s reasonable to ask why a new edition is needed.<span class="Apple-converted-space"> </span></span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">The rationale was simple: the Kĕbra Nagast remains almost entirely unknown in the United States and the vernacular in the English version is out-dated and often confusing to a modern reader.</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">The goal with this new version is to make an English version of the tex...</p>
+<p class="itemText"><p class="p1"><span class="s1">The rationale was simple: the Kĕbra Nagast remains almost entirely unknown in the United States;the vernacular in the English version is out-dated and often confusing to a modern reader; and the cheap plain-text formatting used in currently-available versions tr...</p>
 </li>
 <li>
 <p class="itemTitle">Preface to the 1932 edition</p>
