--- a/Kebra Negast 202x.scriv/QuickLook/Preview.html
+++ b/Kebra Negast 202x.scriv/QuickLook/Preview.html
@@ -101,7 +101,7 @@
 <p class="itemTitle">Preface to the 202x edition</p>
 <p class="itemText">Why a new version?</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1">A number of freely available copies of this manuscript exist online (and served as this editor’s initial exposure), as well as a series of editions in print form, so it’s reasonable to ask why a new edition is needed.<span class="Apple-converted-space"> </span></span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">The rationale was simple: the Kĕbra Nagast remains almost entirely unknown in the United States;the vernacular in the English version is out-dated and often confusing to a modern reader; and the cheap plain-text formatting used in currently-available versions tr...</p>
+<p class="itemText"><p class="p1"><span class="s1">The rationale was simple: the Kĕbra Nagast remains almost entirely unknown in the United States; the vernacular in the English version is out-dated and often confusing to a modern reader; and the cheap plain-text formatting used in currently-available versions t...</p>
 </li>
 <li>
 <p class="itemTitle">Preface to the 1932 edition</p>
@@ -135,8 +135,8 @@
 <li>
 <p class="itemTitle">English translation of the Arabic text describing how the Kingdom of David was transferred from Jerusalem to Ethiopia.</p>
 <p class="itemText">.</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">[Here is] the explanation of the reason for the transfer of the kingdom of David from his son Solomon, King of Israel, to the country of the Negus, that is to say, to Abyssinia.</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">When the Lord, praise be unto Him! wished Solomon to build the House of the Lord in Jerusalem, after the death of his father David, the son of Jesse, who had reigned over the children of Israel, and Solomon, in accordance with his most excellent desire, began to build the House of the Lord, praise be unto Him! Solomon ...</p>
+<p class="itemText"><p class="p1"><span class="s1">Here is the explanation of the reason for the transfer of the kingdom of David from his son Solomon, King of Israel, to the country of the Negus, that is to say, to Abyssinia.</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">When the Lord, praise be unto Him! wished Solomon to build the House of the Lord in Jerusalem, after the death of his father David, the son of Jesse, who had reigned over the children of Israel, and Solomon, in accordance with his most excellent desire, began to build the House of the Lord, praise be unto Him! Solomon th...</p>
 </li>
 <li>
 <p class="itemTitle">Legends of Solomon and the Queen of Sheba in the Kur’ân and in Muhammadan literature</p>
